--- a/Htmljs_10.html
+++ b/Htmljs_10.html
@@ -13,6 +13,7 @@
     <hr>
     <p>Текст</p>
     <script scr="C:\Users\user\Documents\Java 0402-02 Meri\Dialog_1.js"></script>
+    <script scr="C:\Users\user\Documents\Java 0402-02 Meri\Console_1.js"></script>
 </body>
 
 </html>
