--- a/Htmljs_11.html
+++ b/Htmljs_11.html
@@ -32,7 +32,7 @@
 </tr> 
 <tr>
   <td>Дата рождения</td>
-  <td id="Y">Будет дата рождения</td>
+  <td id="D">Будет дата рождения</td>
 </tr> 
 <tr>
   <td>Пол</td>
@@ -44,6 +44,6 @@
 </tr> 
           
     </table>
-    <script scr="C:\Users\user\Documents\Java 0402-02 Meri\Patient_1.js"></script>
+    <script src="Patient_1.js"></script>
   </body>
 </html>
